--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 <body>
     <h1>Hello world!</h1>
-    <p>Some text...</p>
+    <p>Commerzbank tower in Frankfurt</p>
+    <img src="img/CoBa_tower.jpg" width=300 alt="Commerzbank tower">
 </body>
 
 </html>
